# RatingSystemSimulation

./: CMakeLists.txt  README.md  databasemanager.cpp  databasemanager.h  gamegenerator.cpp  gamegenerator.h  gamegeneratorthread.cpp  gamegeneratorthread.h  gameinfowindow.cpp  gameinfowindow.h  gameinfowindow.ui  glickoratingssystem.cpp  glickoratingssystem.h  importdatabasethread.cpp  importdatabasethread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerinfowindow.cpp  playerinfowindow.h  playerinfowindow.ui  ratingdistributionanalyzer.cpp  ratingdistributionanalyzer.h
